# s3-sharepoint-adapter

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  example.http.sample
.github/workflows/: release.yml
src/: main.rs
src/utils/: azure.rs  mod.rs  s3.rs
