[package]
name = "s3-sharepoint-adapter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
once_cell = "1.19.0"
tokio = { version = "1.37", features = ["macros"], default-features = false }
salvo = { version = "0.67", features = ["server", "quinn", "basic-auth", "logging"], default-features = false }
tracing = "0"
tracing-subscriber = "0"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenv = "0.15.0"
xml-rs = "0.8.20"
regex = "1.10.4"
